250912금_SpringBoot(11-3-3) Spring Security_todo앱_stream을 이용한 코드로 변환